# mixerdialog

./: CMakeLists.txt  ReadMe.md  main.cpp  style.css
images/: images.h
modules/: CssManager.cpp  CssManager.h  MixerManager.cpp  MixerManager.h
